  * The runtime properly supports both hard EOF (grammar reaches a state where
    it cannot accept any more characters) and soft EOF (the input reaches EOF,
    and the grammar was in a state where EOF was valid).
  * There is a buffering layer that can read a file sequentially but preserve
    data for currently unfinished terminals.

  C API packaging:
  * The header files are now in a gazelle/ directory, so that they can be
    sanely installed in /usr/include on a UNIX system.
  * The C API now has its types, functions, and constants prefixed with gzl_
    or GZL_, to keep from polluting the global namespace with types like
    "terminal."

Gazelle 0.3, released November 30, 2008  =======================================

  Overview: This release represents a lot of work on Gazelle's grammar analysis
  and lookahead generation.  What this means for users is that many many cases
  where Gazelle would previously hang or generate incorrect grammar have been
  fixed, and there are lots of unit tests to ensure these don't break in the
  future.  There is also one new feature: explicit ambiguity resolution.

  Core Parsing Algorithm:
  * Gazelle now detects many errors in grammars:
    - left-recursion
    - rules that have no non-recursive alternative
    - grammars that are probably not LL(*) (using a heuristic)
  * Gazelle now supports many LL(*) grammars (that have cyclic GLA's) in
    addition to LL(k).  This puts us on par with ANTLR.
  * It is no longer possible to make Gazelle hang by feeding it the wrong
    grammar.  Since the problem of whether a grammar is LL(*) is undecidable
    in general, Gazelle gives you two options for how to bound the amount of
    work.  You can either use a heuristic to detect cases where the grammar
    is probably not LL(*), or you can specify a bound on k.
  * The generated lookahead can now take EOF into account, which allows us to
    support grammars where we don't know what alternative to take until we see
    EOF.
